tests/paczka2/big_fuzzy/62064566.err
Error in line 3: Hew7h w554 352,9
Error in line 4: we0gb A554 34,0
Error in line 1: HeA7h A554 74,3
Error in line 10: HeA7h S487 64,2
Error in line 9: CGQYIh1S7 S859 75,2
Error in line 22: CGQYIh1S7 S487 213,82
Error in line 15: HeA7h S859 45,5
Error in line 29: 8AJbOPv A554 55,4
Error in line 36: A658 A658 57,6
Error in line 45: HeA7h S487 142,3
Error in line 48: HeA7h A658 84,3
Error in line 50: CGQYIh1S7 A658 160,0
Error in line 61: 8AJbOPv S859 375,7
Error in line 64: OeBIS8D4 A658 32,1
Error in line 77: qfGOoB38 A658 78,98
Error in line 79: CGQYIh1S7 S487 11,9
Error in line 78: 8AJbOPv A554 20,5
Error in line 63: qfGOoB38 A658 33,8
Error in line 83: 8AJbOPv S859 64,5
Error in line 110: CGQYIh1S7 A554 109,5
Error in line 121: we0gb A554 29,7
Error in line 129: qfGOoB38 A554 9,8
Error in line 135: OeBIS8D4 A658 56,9
Error in line 136: OeBIS8D4 A554 61,5
Error in line 138: qfGOoB38 A658 91,3
Error in line 143: qfGOoB38 S487 81,2
Error in line 149: qfGOoB38 S859 56,4
Error in line 134: 8AJbOPv A554 7,3
Error in line 157: 8AJbOPv S859 20,5
Error in line 133: we0gb S487 55,9
Error in line 162: 8AJbOPv S859 12,7
Error in line 168: CGQYIh1S7 S487 86,7
Error in line 170: OeBIS8D4 S487 86,0
Error in line 186: A658 S859 24,4
Error in line 193: qfGOoB38 A554 5,70
Error in line 191: A658 A658 26,7
Error in line 175: 8AJbOPv A658 67,4
Error in line 196: we0gb S487 86,5
Error in line 198: we0gb S859 12,7
Error in line 199: A658 S859 26,5
Error in line 189: OeBIS8D4 A658 30,6
Error in line 213: CGQYIh1S7 A554 3,5
Error in line 217: OeBIS8D4 S859 25,2
Error in line 219: CGQYIh1S7 S487 51,4
Error in line 224: 8AJbOPv A658 19,0
Error in line 227: 8AJbOPv S859 64,0
Error in line 218: A658 S487 73,5
Error in line 233: 8AJbOPv S487 30,4
Error in line 243: OeBIS8D4 S859 85,5
